--- a/src/Body.css
+++ b/src/Body.css
@@ -45,12 +45,93 @@
   opacity: 1;
 }
 .body_maincontent{
-  font-size: 90px;
+  font-size: 5.62rem;
+  font-weight: 500;
+}
+.body_2nd {
+  font-size: 3.125rem;
+  max-width: 90%;
+  text-align: center;
+  line-height: 1.3;
+  margin: 0 auto;
+  word-wrap: break-word;
+}
+.body_3rd{
+  font-size: 1.875rem;
+}
+.seprator{
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  height: 10vh;
+  background: linear-gradient(rgb(36,36 ,36, 0) , rgb(36 , 36 , 36 , 0.2) , rgb(36 , 36 , 36 , 0.4), rgb(36 , 36 , 36 , 0.6), rgb(36 , 36 , 36 , 0.8)  , rgb(36 , 36 ,36 , 1));
+  z-index: 100;
+}
+.break1{
+  display: none;
+}
+@media (max-width: 1387px) {
+
+.break1{
+  display: inline;
+}
+  
+
+}
+
+@media (max-width: 884px) {
+  
+.break1{
+  display: inline;
+}
+  
+.body_maincontent{
+  font-size: 3.5rem;
   font-weight: 500;
 }
 .body_2nd{
-  font-size: 50px;
+  font-size: 2rem;
 }
 .body_3rd{
-  font-size: 30px;
+  font-size: 1rem;
+}
+}
+
+@media (max-width: 548px) {
+
+   
+.break1{
+  display: inline;
+}
+  
+.body_maincontent{
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+.body_2nd{
+  font-size: 1.5rem;
+}
+.body_3rd{
+  font-size: 1rem;
+}
+}
+
+
+@media (max-width: 386px) {
+
+   
+.break1{
+  display: inline;
+}
+  
+.body_maincontent{
+  font-size: 2rem;
+  font-weight: 500;
+}
+.body_2nd{
+  font-size: 1.2rem;
+}
+.body_3rd{
+  font-size: 1rem;
+}
 }
