--- a/src/Skills.css
+++ b/src/Skills.css
@@ -10,8 +10,45 @@
     font-weight: bold;
     margin-bottom: 20px;
 }
-.skills_skills{
+.skills_domain{
+    width: 100vw;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+}
+/* .skills_left , .skills_right{
+    /* flex: 0.05 */
+    /* width: 4vw;
+    height: 30px;
+    padding-bottom: 20px;
+     */
+
+.skills_skills{
+    /* flex:0.9; */
+    display: flex;
+    flex-direction: row; 
+    overflow-x: auto;
+    flex-shrink: 0;
+    width: 100vw;
+    overflow: scroll;
+    padding-bottom: 10px;
+}
+/* Uncomment Display none to remove X- Scrollbar in Div of skills */
+.skills_skills::-webkit-scrollbar {
+  /* display: none; */ 
+  height: 10px;
+}
+
+@media (max-width: 1115px) {
+ .replacable{
+    display: none;
+ }
+}
+@media (max-width: 565px) {
+ .replacable{
+    display: none;
+ }
+ .skills_header{
+    font-size: 25px;
+ }
 }
