--- a/src/SkillsCard.css
+++ b/src/SkillsCard.css
@@ -1,9 +1,11 @@
 /* SHINY BORDER OUTER WRAP STAYS UNTOUCHED */
 .shine-border {
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   padding: 5px; /* border thickness */
   border-radius: 20px;
+  width: clamp(180px , 13vw , 220px);
   overflow: hidden;
   background: linear-gradient(
     45deg,
@@ -14,6 +16,7 @@
     #3399cc 100%
   );
   background-size: 400% 400%;
+  flex-shrink: 0;
   animation: shineMove 8s linear infinite;
   margin-left: 10px;
   margin-right: 10px;
@@ -33,8 +36,8 @@
 
 /* CARD BASE - PERSPECTIVE FOR 3D FLIP */
 .skillscard {
-  width: 10vw;
-  height: 23vh;
+  width: clamp(180px , 13vw , 220px);
+  height: clamp(240px , 25vh , 300px);
   border-radius: 16px;
   perspective: 1000px;
   box-sizing: border-box;
@@ -118,7 +121,6 @@
   text-align: center;
 }
 
-/* DESCRIPTION ON BACK */
 .skillscard_desc {
   font-size: 18px;
   font-weight: 500;
