--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 body{
-  margin:0;
+   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  overflow-y: auto;
+  
 }
+
 .app_body{
   display: flex;
   flex-direction: column;
@@ -34,4 +37,31 @@ body{
 ::-webkit-scrollbar-button {
   display: none;
   height: 0;
+}
+
+.testimonials {
+  width: 100vw;
+  padding: 50px 20px;
+  /* background-color: ; */
+  color: white;
+  text-align: center;
+}
+
+.testimonials_header {
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.testimonials_sub {
+  font-size: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+  line-height: 1.5;
+}
+html, body {
+  height: auto;
+  overflow: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
