--- a/src/SkillsCard.css
+++ b/src/SkillsCard.css
@@ -128,3 +128,46 @@
   text-align: center;
   padding: 10px;
 }
+
+@media (max-width: 768px) {
+  .shine-border,
+  .skillscard {
+    width: 160px;
+    height: 220px;
+  }
+
+  .skillscard img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .skillscard_text {
+    font-size: 20px;
+  }
+
+  .skillscard_desc {
+    font-size: 14px;
+  }
+}
+
+/* Small phones */
+@media (max-width: 480px) {
+  .shine-border,
+  .skillscard {
+    width: 130px;
+    height: 190px;
+  }
+
+  .skillscard img {
+    width: 65px;
+    height: 65px;
+  }
+
+  .skillscard_text {
+    font-size: 16px;
+  }
+
+  .skillscard_desc {
+    font-size: 12px;
+  }
+}
